# medium

./: .gitignore  README.md
Components/Astral/: Button.qml  ComboSelectedItem.qml  IconPlaneButton.qml  Loading.qml  SelectionCombo.qml  TabButton.qml  TextField.qml  qmldir
Multiplatform-App/: CMakeLists.txt  main.qml
Multiplatform-App/Couple/: CMakeLists.txt  Couple  Couple.code-workspace  main.cpp  main.qml
Multiplatform-App/Couple/Docker/api_server/: Dockerfile  README.md  app.py
Multiplatform-App/Couple/Docker/database/: docker-compose.yaml
Multiplatform-App/Couple/libs/: libqsqlmysql.dylib
Multiplatform-App/Getting_Started/: CMakeLists.txt  Makefile  main.cpp  main.qml  qrc_qml.cpp
Multiplatform-App/Thread_FutureWatcher_GUI_Async/: CMakeLists.txt  GuiManager.cpp  GuiManager.h  Th_FutWatcher  Worker.cpp  Worker.h  main.cpp  qrc_qml.cpp
Test_Environment/: CMakeLists.txt
